# boorubox

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.example.toml
.github/workflows/: ci.yml
src/: main.cpp
src/app/: App.cpp  App.hpp  Config.cpp  Config.hpp  Version.hpp.in
src/download/: DownloadManager.cpp  DownloadManager.hpp  FilenameTemplate.cpp  FilenameTemplate.hpp
src/gui/: GalleryPage.cpp  GalleryPage.hpp  ImagePreviewWidget.cpp  ImagePreviewWidget.hpp  LogsPage.cpp  LogsPage.hpp  MainWindow.cpp  MainWindow.hpp  QtUtil.cpp  QtUtil.hpp  QueuePage.cpp  QueuePage.hpp  ResultsPage.cpp  ResultsPage.hpp  SafetyUtil.cpp  SafetyUtil.hpp  SearchPage.cpp  SearchPage.hpp  SettingsPage.cpp  SettingsPage.hpp  ThumbnailLoader.cpp  ThumbnailLoader.hpp
src/http/: CurlHandle.cpp  CurlHandle.hpp  HttpClient.cpp  HttpClient.hpp
src/index/: ArchiveIndex.hpp  JsonlArchiveIndex.cpp  JsonlArchiveIndex.hpp  SqliteArchiveIndex.cpp  SqliteArchiveIndex.hpp
src/model/: DownloadJob.cpp  DownloadJob.hpp  LocalArchiveItem.hpp  Post.hpp  Rating.hpp  SearchQuery.hpp
src/preview/: BlockPreview.cpp  BlockPreview.hpp  ImagePreviewBackend.hpp  KittyPreview.cpp  KittyPreview.hpp  PreviewCache.cpp  PreviewCache.hpp  SixelPreview.cpp  SixelPreview.hpp
src/providers/: DanbooruProvider.cpp  DanbooruProvider.hpp  E621Provider.cpp  E621Provider.hpp  GelbooruProvider.cpp  GelbooruProvider.hpp  ProviderUtil.cpp  ProviderUtil.hpp  SafebooruProvider.cpp  SafebooruProvider.hpp  SiteProvider.hpp
src/tui/: GalleryScreen.cpp  LogsScreen.cpp  QueueScreen.cpp  ResultsScreen.cpp  Screens.hpp  SearchScreen.cpp  SettingsScreen.cpp  TuiApp.cpp  TuiApp.hpp
src/util/: ContentFilter.cpp  ContentFilter.hpp  Logger.cpp  Logger.hpp  PathUtil.cpp  PathUtil.hpp  RateLimiter.cpp  RateLimiter.hpp  StringUtil.cpp  StringUtil.hpp
tests/: test_archive_index.cpp  test_blacklist.cpp  test_config_validation.cpp  test_download_manager.cpp  test_filename_sanitize.cpp  test_http_client.cpp  test_json_parsing.cpp  test_sqlite_archive_index.cpp  test_url_building.cpp
